fix: avoid rank icons to be wrapped in case of long titles

--- a/todo_merger/static/sass/custom.scss
+++ b/todo_merger/static/sass/custom.scss
@@ -6,6 +6,7 @@
 
   .rank {
     align-content: center;
+    min-width: 4rem;
 
     a {
       color: #666;
